
5.2b1 -> 5.3a1
    - jbj: resurrect "make dist".
    - jbj: i18n: update po files (Translation Project).
    - jbj: tests: "make check" for RHEL6 beta passes.
    - jbj: tests: fix: invoke check-files from in-tree w "make check".
    - jbj: rpmfps: don't bother w file fingerprints for *.src.rpm installs.
    - jbj: rpmbf: sanity checks on rpmbfParam(n,e) arguments.
    - jbj: rpmvt: add header virtual table (no arrays/blobs yet).
    - jbj: rpmvt: add rpmtags virtual table.
    - jbj: rpmvt: permit column data types.
    - jbj: rpmvt: resurrect Nixdb against db.sqlite ValidPaths(path).
    - jbj: rpmvt: stub-in a loadable libsqldb.so module.
    - jbj: rpmvt: stub-in a loadable libsql.so module.
    - jbj: rpmvt: stub-in a loadable libsqlio.so module.
    - jbj: rpmsql: rewire rpmvt/rpmvc objects so sqlite/mutexes interoperate.
    - jbj: rpmsql: stub-in virtual table/cursor framework.
    - jbj: tests: update check-sql tests.
    - jbj: build: permit %post -p "<sql> OPTS ARGS" syntax.
    - jbj: rpmsql: use rpmio for input.
    - jbj: rpmsql: use rpm's multiline (i.e. esacped \n) fgets(3) instead.
    - jbj: rpmsql: use rpmio for log/trace as well, manage output fd's the same.
    - jbj: rpmsql: stub-in the other "%post -p <sql>" embedding.
    - jbj: rpmsql: try to read ~/.sqliterc sanely.
    - jbj: rpmsql: use rpmio for output, more refactoring.
    - jbj: rpmsql: another rafactoring pass adding doxygen/splint markup.
    - jbj: rpmsql: fix: always reload db ptr after lazy _rpmsqlOpenDB() calls.
    - jbj: rpmsql: stub-in statistical aggregate functions.
    - jbj: rpmsql: stub-in math.h functions.
    - jbj: rpmsql: stub-in a set of string "slice-n-dice" functions.
    - jbj: rpmsql: set the prompt(s) from basename(argv[0]).
    - jbj: rpmsql: eliminate the shellstatic function, concatenatente instead.
    - jbj: tests: stub-in a "make check-sql" target.
    - jbj: rpmsql: stub-in an "expand" function tied to macro expansion.