@@ -86,7 +86,7 @@
         --with-syck=internal \
         --with-readline=external \
         --without-augeas \
-        --with-beecrypt=external \
+        --with-beecrypt=internal \
         --with-openssl=external \
         --with-nss=external \
         --with-gcrypt=external \
