@@ -33,6 +33,7 @@ endif
 librpmmisc_la_LDFLAGS += \
 	@WITH_DB_LDFLAGS@ \
 	@WITH_FILE_LDFLAGS@ \
+	@WITH_BEECRYPT_LDFLAGS@ \
 	@WITH_FICL_LDFLAGS@ \
 	@WITH_GPSEE_LDFLAGS@ \
 	@WITH_JS_LDFLAGS@ \
@@ -48,6 +49,7 @@ librpmmisc_la_LIBADD = \
 	@WITH_DB_LIBS@ \
 	@WITH_FICL_LIBS@ \
 	@WITH_FILE_LIBS@ \
+	@WITH_BEECRYPT_LIBS@ \
 	@WITH_GPSEE_LIBS@ \
 	@WITH_JS_LIBS@ \
 	@WITH_LUA_LIBS@ \
