@@ -41,6 +41,7 @@ AM_CPPFLAGS = \
 	@WITH_DB_CPPFLAGS@ \
 	@WITH_FICL_CPPFLAGS@ \
 	@WITH_FILE_CPPFLAGS@ \
+	@WITH_BEECRYPT_CPPFLAGS@ \
 	@WITH_JS_CPPFLAGS@ \
 	@WITH_LUA_CPPFLAGS@ \
 	@WITH_GPSEE_CPPFLAGS@ \
