@@ -477,7 +477,6 @@ rpmDigestInit(pgpHashAlgo hashalgo, rpmDigestFlags flags)
 	ctx->Digest = (int (*)(void *, byte *)) sum64Digest;
 /*@=type@*/
 	break;
-#if defined(HAVE_BEECRYPT_API_H)
     case PGPHASHALGO_SHA224:
 	ctx->name = "SHA224";
 	ctx->digestsize = 224/8;
@@ -536,7 +535,6 @@ rpmDigestInit(pgpHashAlgo hashalgo, rpmDigestFlags flags)
 /*@=type@*/
 	ctx->asn1 = "3051300d060960864801650304020305000440";
 	break;
-#endif
     case PGPHASHALGO_SKEIN_224: ctx->digestsize = 224/8; goto skein256;
     case PGPHASHALGO_SKEIN_256: ctx->digestsize = 256/8; goto skein256;
 skein256:
