@@ -2998,106 +2998,106 @@ crc32:460ab1d6  ref/rpmdb.sql
 crc64:da589bff7397ec35  ref/rpmdb.sql
 adler32:845b7f3d  ref/rpmdb.sql
 jlu32:3d227ba4  ref/rpmdb.sql
-md2:0ca01919517a4ee204241a41c6b1c54a  ref/showrc
-md4:69ce8297764defbb432df3fc5915b52f  ref/showrc
-md5:c25a1e277a4e5f1954df98f5a2931ba9  ref/showrc
-sha1:430424188d5935c1e741a49bd6f40cd0afa923e6  ref/showrc
-sha224:332c8cb40bcbd2317fbbdd8eb3f3cde8819f44fec922f1aa70b2d0d1  ref/showrc
-sha256:923d221546b3afb2b888f29a3701cbbf177b048f3dc18e15f0502c7a01cb04f5  ref/showrc
-sha384:ebbcc023c3a053a2985e576cee216cb07f6ea4856accb14e075108e897f509b0ba8efb6e77f2716abf192122d48b2133  ref/showrc
-sha512:63fa04c7e737a633e7358a123e6756fda09237e535ebb1b2ca9c11a88d073d3419ba16cfb46f528987db3ecb7ddff26d0880f2a879dd0e5449cdbaeb7276b574  ref/showrc
-skein-224:83a89b19d9cad6fcd3677fe90f9b60c35c9275bb0f1541ded32e203f  ref/showrc
-skein-256:8fea9335fec3093db6e6498de89fa155bb40fdbf213485fff4ea054633b32230  ref/showrc
-skein-384:98d729e8d43be8c54990c1e5817286370fabe144ccf367bffef44623895766aa3fe4b2dd7483dd76e9b206c9e6790a59  ref/showrc
-skein-512:3bba47d0894a22d35ee5106b98ecf4608e4a0d755a83924935689a4a2415986a11bd49ca4ec2e487499fd16d7008878b6eabf027c0699ef11fe1228160cc2e8d  ref/showrc
-skein-1024:334e1d5cccc6bd2e0592f34779cf697b6cde5313db7da3baa6d01ae86157ea03f96e795d8886b05113fd5ac0d6a6ae6b2f4f84fb8d7079e71d8b110dd9e263f9d309b88dfd34b585fa7ac809b013ad00c33342cd715c9e5565c024ff1ed7d481cc81e5b96efcc5efb44a76fe09b936eae4d971def9571938f2fc252fbc9e66f1  ref/showrc
-arirang-224:83390bcd70dca5cd0715e84e02d371ef03791be35353b93019f00a11  ref/showrc
-arirang-256:a859eba92bca4078efcb8b7680a91cab9e1a607cff7b85c31cf78b3fa4e1dac7  ref/showrc
-arirang-384:a4fe7073228b98f507ee55b40cee0e97af75f40edc78a35479153ea92a0f8f0e5747e842e48f12c7ff1159ad6b055a6a  ref/showrc
-arirang-512:8a4eb79c7e62a8239669b629386c92df5118beafa4c9b62940698c0f5876f283d7e07c1c47eb640c86471d0811f612f6b06c88d9645d1a86402f2fc418fbfe9b  ref/showrc
-blake-224:4b0edf88b5bc6ad4c8dcdfcc819137af47277b824cbf8c065cdf40aa  ref/showrc
-blake-256:a4d8a761f9ea468ef3df6fc76efec11d4c10866f97ad39dae7750ccc70b1f924  ref/showrc
-blake-384:3d5bde4141243f152ae0872c566ca012ad8d558a278cb7dfdf0cfe8571ba52b36d0c10fbb501a2624fd51adfdd52b12b  ref/showrc
-blake-512:dfffe505941e98487976b034dac11f5145dcadf24f7db1f74bc3d371efeb64452f2dbfffd8a4b2a09d7c20c6a20a01b1b6565ae756593de6810e69c69c4d6d91  ref/showrc
-bmw-224:6e1544b1e29723dd35b7618b9d1c89f62f55eb3828f281296a9e56a0  ref/showrc
-bmw-256:5cfb4cebe525207ce73b02a5daccb56ad5b2562fbefc2c9b8fd44b4aabc4be32  ref/showrc
-bmw-384:2dd2bb5f893d66b66e57f8be5b9a2a93bf47488bd1c008049b19e1fb16ff2ec3b3cff40908dcc3d72e3c195387e367cc  ref/showrc
-bmw-512:e7cb8738b5b058541f04001d76b84fbfcafb265eb0b5135791f1e8e29fe721b91834844d213c0c4940d06e1cf21593f7725b008d7a3e8249a72fac2ee63cb0c9  ref/showrc
-chi-224:6af5595e0f251c57590d4e0fe51b3418c9f52367f6f6175ee4169592  ref/showrc
-chi-256:a5c07c8729af82a28716a14ab3b28db5b8df33bc8cdbecbedbedeaa2a3c2a40e  ref/showrc
-chi-384:d9f31cb4d07548ca61b9e6f8298805396c1fbaddf8d00115c1f33c9543288594043267f5f56be972d135e6a68860561f  ref/showrc
-chi-512:6d154a5721e1b2dcedcc800adcaabe318ddbae028697f420be7d55dfddb0ec1c85bd0261aff5be33acaedc3abcf90def2bd313583a760be45273693f3c4f1ab9  ref/showrc
-cubehash-224:0bbcd8f8e599f60713557d342c98728badf2992697b7a6613bb7ed56  ref/showrc
-cubehash-256:2491471577424cbc0f2328df9c8598d24d693b03d9f0ed7d3fa35c887baab129  ref/showrc
-cubehash-384:58b276a7eeabc48399227b1659f4a05476566ef97168e16da24856d7851edb9c7ebccfef403b90caa638006c70c17cbc  ref/showrc
-cubehash-512:3edc283ee04f7f1d5822fea1e1e6ecf01c2bd2e464c57bf8817df8fc4c30e9d638f57d8be04fdbc38724da5ba49568f8738c2a1a3642d03f70d323fa6e7d6f4a  ref/showrc
-echo-224:1750c13c1fa9dd7116c5820ada48ff653fa5af32ec81196033a79fbe  ref/showrc
-echo-256:f40d87028eb70689aaa5fe45164c408507f2d7d44ca231603e836b5b9f2e9c7d  ref/showrc
-echo-384:4c1aa6b74cc2fc71a67cf99f24f940e5f743bfd7cd135e609344e1e9cd5655c4418ced3723567a5741e1ef00f12da3a3  ref/showrc
-echo-512:c00e998af8aab4ff036eb8c51b6ff752d0b535fc0811a2a8805d255f02d17212db563173d4528dd0ca8daf9b93f0a60bcf3097f46d48b4401baed1a680cebd56  ref/showrc
-edonr-224:53209a6057e9f0f85c88b61fcff5a6a21f685c12101466a93de7c4ba  ref/showrc
-edonr-256:b9d63f7abba445687b2f6ec382a28ffa1dd1acf4630a5fed7ca21db68c7afd52  ref/showrc
-edonr-384:a68033a3caa78cba87f9fed90460794812c695c84f0b064cfb506706eebdfd6f8f79b113352d137cc49bec53163479bd  ref/showrc
-edonr-512:01c2fd9e7867ab9d0076dbdba8f76ce9cbd37ff511461a80c80de626b31ba26647301614f22c3ffe5bd7579db8e08a1cd1ce3fed7ce50eda835407a4d49cfa47  ref/showrc
-fugue-224:9c7c1652ecfb22a096edc54f63685a049f0b2a0b525fb9bcd713018c  ref/showrc
-fugue-256:8addb1a66c7f7867a883e2143f59946d017cc6b1b957a62eb13a8c80062955e3  ref/showrc
-fugue-384:6ea1a08fed50e18753bd37b498c9b08898bb35677ac4ce545f982678b9770f2b8e9bc6c38c40a64cf4b02b58590c2d9c  ref/showrc
-fugue-512:119cf7f528c3dad311fe4e9311f7fc9d092ff6a9f663f3d468533d27bc393925fd592d2002422f6a9c381a3ca41b880f7405174b115f11573d6a030075239866  ref/showrc
-groestl-224:def9f7b1418395184d663d6ce1032906fc46a7e7fa64e020085f11d7  ref/showrc
-groestl-256:22219619d06862978ca1e16e26887e21af3d86c72fe2be7b37773de7678af0a5  ref/showrc
-groestl-384:c06d0eabe72d33c8cb2546b79e15427b3f82044081a87c0cd923ed1d5d0812045ba9c289dcdfce738afa9b3a945a7391  ref/showrc
-groestl-512:26b356b6e1e65c6dbd32e463ba301ed3a47e380dec8006167a788cbf93cf5bd847c07bf8eaa67ebfcadf3218aa563c9d0efa5478c601abcc6459bc46daf2aac5  ref/showrc
-hamsi-224:76c6200790d529113bfc5b92f21492757ce2322d2a04efb6315d3cbf  ref/showrc
-hamsi-256:50103d97a65fda3ffff7661b923bfc84059d73589bfb2263fceaed233f30e065  ref/showrc
-hamsi-384:7f74a1eb492d2e5eab5dd54eaac8ef7db5547881f3d0c9a2cb670b0fa176b64b5f3d48d0570ccf4960165789a3b82316  ref/showrc
-hamsi-512:f05878bd1b0f40e854d4b673b371549036694657b5271cec37786c2169a7952ed211659ec142523b7de90cb870aa8e2b34282b5b424d7e03266f9416db52f64a  ref/showrc
-jh-224:9e8c868dcc2ce9f47f02d39c2dcffa732cd164466c712a5859dc4799  ref/showrc
-jh-256:fd24e01842c9e38b3434a8ff25fe3957c3882a4684e45d30843b3bae33a89dc7  ref/showrc
-jh-384:9d73f3427f9292861086d282b927090f70a104e5190951fa77639df52cc2e107bbc0cafdfe0138cbbeb81733df128710  ref/showrc
-jh-512:20caf29870db0ac1e0b8fc3dc3dbd26e123846de6c5d09c6acc3ea9d1b23f4cf27bc96f7a56fc504bb60c01c908bac28ef2f1162c0d0db58f058ee01d03bd5b6  ref/showrc
-keccak-224:cb8ad78aaa92bd935ed2efdf67d997f0e019b6c159ff9c845333ca71  ref/showrc
-keccak-256:3003391a039f21965307852cfc55b2bdfda3a3561f4c714d645bf126031aa6d3  ref/showrc
-keccak-384:317ec92f4e1dc6f223d3a6bbfcfd0caba2e6dac21b2a857c7667d851afdff0891494be9ba2f0b204e576d9cbba9d96a1  ref/showrc
-keccak-512:bdfe26ad2591ed0a1d60fee42b20446a0d1907253fab6027861d5600feba64e1823f8a1e1c81865ff2ff61e700213fb4dac013e0f42958935e4a25ae190e383f  ref/showrc
-lane-224:db3c2ab7fa22db3482be77eda86b11dfceb956a51739c2107452a149  ref/showrc
-lane-256:9d33b88cf7b5028aeb5991e4d34b87dd05e461a248c3745393e0a915bff18330  ref/showrc
-lane-384:f98bc8ea0f7047fa95b123030d6bb22b90b68c11e9befa1cb9038df61823815d19d406041adbfa05e879e61c800ff7b8  ref/showrc
-lane-512:c9431e7f9127a870f454db06c8fb5e96765d1f9598555e315b50d500eb7df65a800bf19317bf218a6287dc7ec4bfd4f4b6738e97b7dafc408854ccac263f10e7  ref/showrc
-luffa-224:b98b73825fe66ea8511ba09295f56c6e253ddc674aabd40caaf98f6f  ref/showrc
-luffa-256:b98b73825fe66ea8511ba09295f56c6e253ddc674aabd40caaf98f6f9f4902e7  ref/showrc
-luffa-384:bdbfa30849000b2b51734cba2d20b1b477bac80baad65127b75d17aa3dec52a58f725724746c94129a75bfb15c553708  ref/showrc
-luffa-512:494a13deac51f7e482c0c3f525f7a68f5f0fa6d0b94823f3e39321a10d863ea32b6eb68bc2f928a2ee82256c7ac31720755f85343744b12a8372c79a5b258546  ref/showrc
-md6-224:499a866ba02f4c76a838c166661a4b6306997ce6afbad83d099728d4  ref/showrc
-md6-256:2de4c11493f5921a62691003dfee180331864981787caa8e798e940b12af2920  ref/showrc
-md6-384:e0eb4688a032b63868ac318e1b4cd3dbf231411be2e6998bdb8d7d066cb1ede05b7032521b46fca4378777799e1b460a  ref/showrc
-md6-512:2b86dcd102e8bdead994a6ab5a357fea59e869e985b079641b353c826631c51af3bebd0bb45973822bfa2341d611af9f4453cd531c57675b3a682876fa41ef0f  ref/showrc
-shabal-224:ae5b40dcaa662536f5098d32e24df0dcc8ea387ee320f79496b81f7e  ref/showrc
-shabal-256:2ddfee44f1fcfb98e7d299815b62ad01b0d264eb178c37aa6237d8a14cf1c81d  ref/showrc
-shabal-384:2095590735b9d73d0339b6d9dd465d16eaee2d8d9223078e182b20c4b5a74cf3867518efe9c78e3a15ca12eec8297be7  ref/showrc
-shabal-512:d79e208b1a8b3fd1b383754b3d274b844745b0c51518aee0dad15c8acec032d87c1a2e5328e752455c02a0e0ae85e0c7818b26d3156a40ca4ef45ba7d26935ae  ref/showrc
-shavite3-224:8f153cc46b13727ca2926022ed373997bcf44c414f16c32151239a65  ref/showrc
-shavite3-256:9fd8ce6f90df3a6d2123c50c579bd792bf858e910136ddeeeb6501c6576d9d84  ref/showrc
-shavite3-384:a03583b98a108d4db5c3afdcc2160ec98d6660fb73987496b69d9f82019d52b02db796843cbab0f80dad5312f8938a2f  ref/showrc
-shavite3-512:2c16d2f92df962004ac4d92ab18526b70123f7ed6855397a4dad8fbd5f8b42120879245344738375bf5b1dc451adecb640d9990e5b1a5f8c4911dd51016e31eb  ref/showrc
-simd-224:f0186297be19e22a3993c61d5aca5628a10eff09910cd09eaea476b6  ref/showrc
-simd-256:a0eb69d662675519495368772a9e2fd653cc1d209e8fd88d25560c723628d976  ref/showrc
-simd-384:053ced248becb15602536a86b21a0c2d8ba9099f8e34cc4b9f6cf637758564a36af2315f81ce63b549c32c895c6b7393  ref/showrc
-simd-512:bde520f2a6f433a86a62b93d94c92d47482f877984c15c27ba426c4fd72270c1d2af9e0fb3c4c9f0851cf643369210b9412e5b8bdc51190cc2acd9ce8031a3ab  ref/showrc
-tib3-224:2984439727b2f457f2f609a515fe20764b18a6eac2aa1734658ad5bd  ref/showrc
-tib3-256:83a474ccea7e5495c8cdfafb29f0fba0f29d07dafe609d4c31b3487de2ca8fb2  ref/showrc
-tib3-384:7d60d7aaec22b966d70d33fea0d2e5d34cf3ee7a6d8f35ac51b12ee7ff081c35a9b2487350951169a1b38cc326f302f8  ref/showrc
-tib3-512:804bcf56a08bdfd64f72ec788ff4cb956335eaaf0f86e670a1987c65ae373a1c93ad3b23149de61cea1e2baff9e5fe8cc4de04127d6b8effe381e64c91c6761c  ref/showrc
-salsa10:bb65e2c4703c799e60386d898b0171107e80a42bfc378f55d6933c59a0fe91a6da9e1cb8c27915ca79ab6a6c7eb5fa0007e8066950f1d2f93308b9f64c229a26  ref/showrc
-salsa20:fbe616ce3ee5b73c7057f025b8373621f65303a22f62dd6634388851a06302f2da2e61cb5ced5505297c35b44332af71db07c66c36166c98381adb58f0054a8f  ref/showrc
-rmd128:310c9a876d1a56261a2613643a4b380e  ref/showrc
-rmd160:3376a893018f4424d7c97a41363d149b7739beeb  ref/showrc
-rmd256:64479d5cc6b1e8727470ed6d3dfae7108a2e4b5ba5365015afdb7243efb1a526  ref/showrc
-rmd320:9c7d3fb7696c7150c1a35a30b3b3f788ca3325717bf190808687d3e4f4c8051445219107920886b2  ref/showrc
-tiger:44dbe9364c78187b924a4eae43c068ea9d73feda469f24ad  ref/showrc
-crc32:c0dfe3a6  ref/showrc
-crc64:269368b34097def2  ref/showrc
-adler32:55e0c5f3  ref/showrc
-jlu32:74118dbd  ref/showrc
+md2:877d860a7b769a0cdae9c71f72739649  ref/showrc
+md4:260bd9cab149d8159a80c0c5e4380762  ref/showrc
+md5:8f3dd83b6a41df4ec541e59a9a560c65  ref/showrc
+sha1:be7b094428a3ee4c6e3ddf149b8916d554b3857d  ref/showrc
+sha224:adb3902ea6bb42c8587feddfc591db43eb5f33a10f71d7fc098e5ac5  ref/showrc
+sha256:9c0932af39ae399e4903060e458f38a19910fe668f4a8b790df5564a6c5076ae  ref/showrc
+sha384:3d6360d3901ef1783710e99d59fc162690c9013bc661d656543860ff7a9704956c44ba4376a67d7149abeae6a9bdba0c  ref/showrc
+sha512:9245e4aca37fcb404378e78f8ea68bce422635102437bfa527a7a355cd06d9c4025cc3e3e6a89b5444689c4b5932bbb71dbf4c40682ba332a0457c3a92cf428a  ref/showrc
+skein-224:324be14fcf9735a2dee02ee752b069221193d38abdb52d2892483844  ref/showrc
+skein-256:0b1bc54d4dcb53953ed116272b87b28f5ab0ab11425a5833d3dd9a90d9931093  ref/showrc
+skein-384:b812d291a38a724bfa7178d44c8867f3bda8a2a0fbc002eb7215fb34994c33cfc0560661b4794d7cde84d001a6f96292  ref/showrc
+skein-512:048c3bea6af89403dea1d9e95da166e47188b0f00678cc09e7f3e22ff41c598d1d895e4cb1ee0f4b3f1ee33b0bb742d4ec0fbcf3366415b7d41191f60fd60d08  ref/showrc
+skein-1024:38b0847de9aee7be6dbf7d04965ad3c7fef4133c1832a99250f42aa0862f1701110a6447f6464a03f16b61a259673c534cb367303fc9d46f4d67d7b9b19a4de9506f406115339e74dd13e786ad9b3d9ecbe39f91c76e03b5a5ee98e1d85dcb63cd8c8067dda22a82a7782c769f24c97f0b2b78630d91942abcd9b1299ac1997b  ref/showrc
+arirang-224:4135d480be14bc49ce46f5e60b375e7a950e95c9e0686a868aafb559  ref/showrc
+arirang-256:a3b99daf7fd83ccc9f16fb5158b8edc8926308a8f23c9b0582e8bcb55ebc33df  ref/showrc
+arirang-384:2f59dbd9f5a698f5c3bf43ca3ee17e9a8091139b55be82744c1d249d87eaec76d79bc3df1e0babdd023a3608fe3632d6  ref/showrc
+arirang-512:d4ab9c6cd909a2e437c082a3a648df3408aa2af91e169dc977329467c989c0825109568b72b80831f8afbeeb26bf2188d70998f265f218e90c414f0fd4eead25  ref/showrc
+blake-224:7d791a17d99ca94537d02bc8196d886134191a7dce888f10846d2176  ref/showrc
+blake-256:ce35327a46b68bbb75b574acc3e9d010ef0abd91a00992a56b0f40998d3ed70d  ref/showrc
+blake-384:a7354492b03f7a4adb16027c02732b5a7f2b7de4d271faf4db10c478f35d8ba391a5edc74f21e062cde2efaa5d248b8d  ref/showrc
+blake-512:9b412d0be5ef3428c882698eda960a2c4bfe088d1218039fdea6b4bc5961718f87321317d4381dbcf76caf0c6502a372ec0264424ffe9326bf7ff696b54bfbeb  ref/showrc
+bmw-224:9a4ab838f669bc5d2b4f56c1e105d6b8b5ad53123e39d0fbaeffec6e  ref/showrc
+bmw-256:4e5d5b535a48f47ed521bbd404051be34656e3d93565a83829e70ca0bfc72de7  ref/showrc
+bmw-384:a20e0f87a72db6ffca78eba54039e0431f57e87ce8c15acde28b54bb18a894c370a796f3eb6d3383d4462446a1029ee4  ref/showrc
+bmw-512:285b7a8cd204b30eeeda8a05bacd6dcad1a568ef6c8dcfc984a8ebde7c2128ccdc5a01ab5e2939f2b0d52d8a795391739035ec68e76c173be1687f0fe2256b93  ref/showrc
+chi-224:4cbfebf04d2f7728a170a9e4adf3234db47d09d2d111324543a6469b  ref/showrc
+chi-256:acd4645a04383d0c436f3980266f4716f0557d0d964cd4473e40a9a2b3041776  ref/showrc
+chi-384:b952f5c912a44ff7e430e0a2d8cf3a3c9c6b1189614ae38e9716cc8c2557ead3a87fda497e0575964274ebb30fb0a5c7  ref/showrc
+chi-512:04e0714ed963fc72c972e7d206dfe108983a2d71d2b6938d8eb4bf53b0e3e1e68be71b035c38e5ac8f0141b1b793eb530f4d9661ad61c439ad6548b0f53f87ac  ref/showrc
+cubehash-224:635a817d645635a893e0ef86b7ff9ea1249b8a1e15edb69568f9bbad  ref/showrc
+cubehash-256:99a0e6638de2956f0c4f86e45571d05ba5bae0b36d4f3e8774cd272fec04c78b  ref/showrc
+cubehash-384:91c64ab77e30e1f77435ffb33286db1c93508dc3be3a7b0882a92e072af085aea6cf9090acac989c65bb2d3de8e43754  ref/showrc
+cubehash-512:05d3a34728b5d636e61fb733ae1b232e8f67dff463dc639035dc32e9e7c1ba0490e3afc35012753d86e47dfaf9e48203c3457db9d73aca19083b45fc085210f2  ref/showrc
+echo-224:72ed1785d38d4c888ff83360318598c0119f935d263877686b4e0a48  ref/showrc
+echo-256:37c0ce4ec54d09f27c8f8a5f2e46911e9811176c5dddf174ee0c191ba98d2337  ref/showrc
+echo-384:b910c6c5f3084d4793d7f1629c81f9dca7ecc17f3f870fbe38ab6e479be6cf05d7099fc8313a185df035586c0c94da9b  ref/showrc
+echo-512:e113d3cc97de0d6f1c7acd69189ac0b2f9250cff493d70f0de836fc634167143e85131b388566afc2e8715f66e69469723c67e1088eb34f71815021f371bca6f  ref/showrc
+edonr-224:b080be64315e20875b4a34e4b1d3b0b4cf149615fa8eaa6f50035359  ref/showrc
+edonr-256:3f064f03a57054467bc0c25333e73b128c6f79b765ad27d5df0ab6eddbcd4e55  ref/showrc
+edonr-384:3fc1c838a7b24b3d4a79a18fa5bce264dfd117ca6ca6ca649a0805c612e4099b3ee5536aa865471b166d0596985e5544  ref/showrc
+edonr-512:a01d55b981ee843642710216d2d818da16dc4410ce8238e84854d9e435e46b5bc642cf445e32c17b1d4f9ad7fc0a8c2f8dc983895185e5360917bf87a7338713  ref/showrc
+fugue-224:b190b48f5b79a079e86e95b7de56b0d258387e3b5aa092d8e3765549  ref/showrc
+fugue-256:09f902f1d65518a7b8fadc39cd57140f11e44cafefad30eef456ae9bf0e32536  ref/showrc
+fugue-384:5b5968eca73c58b454c647d7f89e354e76b7eb7c0de92acd03897aea26a6a88c750dc132b1e46f6dc7849ec86c809428  ref/showrc
+fugue-512:5f7ca89855854f7d940eaf485acb71dd70517254c06ad9e0817447980fe707a601c57a026108fcbcafe10104aa3ed742d732c4c1ac95210877bcbaa07f3e6cbc  ref/showrc
+groestl-224:66601538ade4bda15420f3ee24a222ad70d4d3a7583d27f3dc53aa27  ref/showrc
+groestl-256:71230d946601fe698b63b90162c2d73f3e023efddfa7d1c12ec4c372d4bece5e  ref/showrc
+groestl-384:17efb4e7883ac8ad9164ae6831a1aaebed9149881bd80197b162a8cfee96fe24e554a2cb80467b97efe310c88836de5b  ref/showrc
+groestl-512:bebce4dbba578634418f8123f30997899db49364d4a2da729885ef7bc0aca552efad5b0c0a3dcbe5ba4b8de348a5e16c6d8d753a5ec81a56529cf1df5d604200  ref/showrc
+hamsi-224:6f983e6f58ab7554f3ddfe8f3c9238241ba685c22db049dbb7ed8207  ref/showrc
+hamsi-256:148bcf1743f6cbc10fa9573970d7f325266ddd17b919747877c51f4389de1127  ref/showrc
+hamsi-384:02a5daa94a31ee3ef25d1356ad5095318242ebfbb882b780f09de22948c9267cc9937a9b1a738713082612316cf7e5df  ref/showrc
+hamsi-512:8dd8e08690f6bf5bfb73c8695a5a75873ac54c70511e91ff25271dd8262e8f69eda50d1679d302c7f72d05f0d279e29bcfb8c2abe01c56f34ae396ae6414c288  ref/showrc
+jh-224:77cca8f1d79f9608c336af235f17d648252e191cd05cebff8b721470  ref/showrc
+jh-256:e5355302db7ce5d892ac67c77461231cc25f6e15f62559e90e7c5b0498dc3bc0  ref/showrc
+jh-384:2d52c7daef7f264fc684de91f1dd572779e82a76079febcd832a96e33ab3c83e6e8518c1946524ca07b29caa128a1140  ref/showrc
+jh-512:63d83516d3d4239491670b58b1d68381f2aa9b3d30c051ba5471e6abd247962f3acd75417b8a41a5daa851f15bcfeb4730ed297a1fcca0db9b545219e4e124a8  ref/showrc
+keccak-224:61fa1343c149e7e68e218b2ada2788f49a590e5f59d81feb8c0cebbd  ref/showrc
+keccak-256:779906f515fb5e958396076f0414145755d48b43a9aaf9e0efd7309ee5a00fe1  ref/showrc
+keccak-384:af8185c16bd1161f11252e0f930cf26fbe6b7255c4cad82baccc6a93c9ffa957f3a35503a0826e224434c272689216c4  ref/showrc
+keccak-512:943f78e61b3fd3474e8e7aaa72a69e0e5ce268477a640a28965ed1623dba502a2ac0d826a2c039cdea327975fe207227650c828884a311511aecccbfc2d22469  ref/showrc
+lane-224:be5be1c315429581c0f102d80afbd01b185a74333ab51c7b47eeb68f  ref/showrc
+lane-256:4acfb931e2f583d2b0459c02ceec42c7299c3d885b1344788c95a114db69a547  ref/showrc
+lane-384:f0b0e4c91d72b0e93242c578f908bbc67431060b6f8098f7c4844364da103b076fe9d078b3e5d94b9dd056d72cb7a7e2  ref/showrc
+lane-512:54e3e8739998b7602828c49d09d10bef5ffe7e2fafde53f9fde62cd94bd074612ae6c7562c6b39250098d6855de91f315e669ecf0a6c54564a11133ad5e758b9  ref/showrc
+luffa-224:9860757a012ac5cedfcf188967a9cf580e7baed22e53815575c624e8  ref/showrc
+luffa-256:9860757a012ac5cedfcf188967a9cf580e7baed22e53815575c624e8fac49737  ref/showrc
+luffa-384:761c396510f1161c5443d41c676a3d32060a3981ea01b9243f93b212d671495ec534ce746c1d77eaede7e43847256908  ref/showrc
+luffa-512:12cbdde776de95f8134ec488f08c33dd0b641520b17a63640d3dbc1374a4d88a0f89f00cea07bd6388dd6cfe8fbf703c019e4f3fe02d6730a9addba3594c5200  ref/showrc
+md6-224:959695dd7c92f07dedfc9e94ddf157910f711b0d55677b89eda86868  ref/showrc
+md6-256:063cb1c1a62fccc16b5423b264ed2c9b136003fb8edc19cd5d57355389555d1b  ref/showrc
+md6-384:6164aa0a46fe8d487e77f43dd6d7072bfba8c11fe3dc1733d813d60fa9d2b3b41583f44ed17eaad697335bc34e357c4d  ref/showrc
+md6-512:6edfce3296bbd9659c7f52de2c4fc6bae4297ecb5e94ceea0874b582211c6942049d11265d50e8ffb6cbc57ab9d35b228d5e2a3a9b0b2e9e6f187692dd5d1de4  ref/showrc
+shabal-224:c68e42a9c0d7a427927f92cc54d88b27846a7adac92ca149dcfe2718  ref/showrc
+shabal-256:04fca6661232fccce0531788cafc3258f32db0d39861e72b8bfb7547b886c0dd  ref/showrc
+shabal-384:65fe3aa854b4139cf462bade105feebba9e8f29ef499ffe451ba227bf9b49cbc46cf3788c65d0cbfcd7bbdc26adcbd68  ref/showrc
+shabal-512:34de9b9cdf51f2f40e40607a2a4961ddb99e11e8987cef179fd61946e4c27b00dc1389d1cac2bab822ec6a808f43a809bec7d51f8f67596184356168119c90d7  ref/showrc
+shavite3-224:8d408fd67c5180e829f9f23b3e1ba5b97e429733a4dd5823b1691c42  ref/showrc
+shavite3-256:ac230a199d861507012a24f711477ddaa54968f55eb8dda423b1f7907b082195  ref/showrc
+shavite3-384:ddcd7c6ad9ad7d777936dc9cb5cad997b1a52e94a148367bf20e614967348d609bcf75ad97c19873d7fb7503ca66298c  ref/showrc
+shavite3-512:761b372cef7a66a6f21f667e67a063f252ea2e49b9c20260d4c25fcd1c6d7349f627984cf6684b7160c9934fb7c4d2a2621f58f872fd48a03f07c1d1a9e285b6  ref/showrc
+simd-224:78c8a1b77c8ab6c76dd09db310f351ee45b421cd8bc21876764fafcb  ref/showrc
+simd-256:a0b72938cca740c565b16a344bad070a854eebe9dde315cdb2ec0c7c85a16a45  ref/showrc
+simd-384:1184019797bf604f5a48d2b796b0799ca43ae19b31dc6e02d32249b95d7a7bffce420bdf64b52f0d4f1e9405c52b7b52  ref/showrc
+simd-512:9d35a846d3764c9468bae17ee02cb9dcc1d3b10fbbd61ba6f3cc0efcf01466d5a506fc40f638fd5f0c4242a9a794c17a651eb4d13560d0357d3e724f10fc9a15  ref/showrc
+tib3-224:dc78f443cc063c46c9458b6b44d4f89ed8635b7756ae59f7d7d1efdc  ref/showrc
+tib3-256:0fe7943355e4c552958ec1a714c19b4e85d2eb3a2ebae1c0da3bb50196ba0380  ref/showrc
+tib3-384:e38adfae288a0a480f0e973afd945f6ee13fb38e32a00a1756b9ece3872d33acb610267cb93f4be3676fc687b7e30d9c  ref/showrc
+tib3-512:1165e4b9e4452ff7f926d7f70d53c8edb55e0760d5c590d77ba75a52a20cdc283d20e8484997d904a9b447d1951cc06be32f499927a9bac4e7a8cab5ba6dd062  ref/showrc
+salsa10:90530be5ed4e9f7ca343b4c04e256aaddea1752f23f49b0d7631e04465ea9e343a1776c8340d78ee0259814b7547c85ecf62415b88371bad4526584cfe52f921  ref/showrc
+salsa20:6b6f2f16ae021f71a5970d8bb67c3a9ea415888efbe807176ab44addbab6e9a147b16d49b7371136426b6fccfc77cb8fa315369b2ba6a14808997896fba24953  ref/showrc
+rmd128:f7aa81ec022104fe12dc802ee9d84fe3  ref/showrc
+rmd160:5915b151a0b5629f3b8192d743ceff3ee3ce8310  ref/showrc
+rmd256:afeab488ef378f0a94188f6b9a534c31094f28e4e6206c5f4d757515f5b8a59e  ref/showrc
+rmd320:aefeedaddb2f6f44957818a5edf99024412110cd3fd229664f2c727dd1d9d11cda99d3667099a1b8  ref/showrc
+tiger:a830a07bb24959fc458b551962268f0a9b4290cf41881b17  ref/showrc
+crc32:3c7399e4  ref/showrc
+crc64:4e94a28fe4a920a5  ref/showrc
+adler32:8002c4f0  ref/showrc
+jlu32:39f7c527  ref/showrc
 md2:13576eb04bde3df1b39e09449d92fef7  ref/sqldb-basic.out
 md4:52c8a3e2b6e13a8407c2a60656b02aa4  ref/sqldb-basic.out
 md5:941fc1d944d8432120031d11c949d764  ref/sqldb-basic.out
