@@ -370,7 +370,7 @@ print (t)
 %{nil}
 -14: __ssh	/usr/bin/ssh
 -14: __strip	/usr/bin/strip
--14: __svn	%{_bindir}/svn
+-14: __svn	/usr/bin/svn
 -14: __tar	/bin/tar
 -14: __tclsh	/usr/bin/tclsh
 -14: __unzip	/usr/bin/unzip
